--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,7 @@ readme = "README.md"
 
 [tool.poetry.dependencies]
 python = "^3.11"
+sphinx = "^7.2.6"
 
 [tool.poetry.group.dev.dependencies]
 pre-commit = "^3.5.0"
