--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,7 @@ readme = "README.md"
 [tool.poetry.dependencies]
 python = "^3.11"
 sphinx = "^7.2.6"
+pydantic = "^2.4.2"
 
 [tool.poetry.group.dev.dependencies]
 pre-commit = "^3.5.0"
