--- a/.github/workflows/python-ci.yml
+++ b/.github/workflows/python-ci.yml
@@ -1,7 +1,4 @@
-# This workflow will install Python dependencies, run tests and lint with a single version of Python
-# For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-python
-
-name: Python application
+name: Python package
 
 on:
   push:
@@ -13,27 +10,47 @@ permissions:
   contents: read
 
 jobs:
-  build:
-
+  test:
     runs-on: ubuntu-latest
-
     steps:
-      - uses: actions/checkout@v3
-      - name: Set up Python 3.11
-        uses: actions/setup-python@v3
+      # Check-out repo and set-up python
+      - name: Check out repository
+        uses: actions/checkout@v3
+      - name: Set up python
+        id: setup-python
+        uses: actions/setup-python@v4
         with:
-          python-version: "3.11"
-      - name: Install dependencies with Poetry
-        run: |
-          python -m pip install --upgrade pip
-          pip install poetry
-          python -m poetry install
+          python-version: '3.11'
+      # Install & configure poetry
+      - name: Install Poetry
+        uses: snok/install-poetry@v1
+        with:
+          virtualenvs-create: true
+          virtualenvs-in-project: true
+          installer-parallel: true
+      # Load cached venv if cache exists
+      - name: Load cached venv
+        id: cached-poetry-dependencies
+        uses: actions/cache@v3
+        with:
+          path: .venv
+          key: venv-${{ runner.os }}-${{ steps.setup-python.outputs.python-version }}-${{ hashFiles('**/poetry.lock') }}
+      # Install dependencies if cache does not exist
+      - name: Install dependencies
+        if: steps.cached-poetry-dependencies.outputs.cache-hit != 'true'
+        run: poetry install --no-interaction --no-root
+      # Install your root project, if required
+      - name: Install project
+        run: poetry install --no-interaction
+      # Lint with Black
       - name: Lint with Black
         uses: psf/black@stable
         with:
           options: "--check --verbose"
           src: "./poetex"
           version: "~= 22.0"
+      # Run tests
       - name: Test with unittest
         run: |
-          python -m poetry run unittest discover
+          source .venv/bin/activate
+          python -m unittest discover
