--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,9 @@ readme = "README.md"
 python = "^3.11"
 sphinx = "^7.2.6"
 pydantic = "^2.4.2"
+furo = "^2023.9.10"
+sphinx-autodoc-typehints = "^1.25.2"
+autodoc-pydantic = "^2.0.1"
 
 [tool.poetry.group.dev.dependencies]
 pre-commit = "^3.5.0"
