--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -12,6 +12,7 @@ repos:
     hooks:
       - id: black
         language_version: python3.11
+        args: [--line-length=120]
 
   - repo: https://github.com/pre-commit/pre-commit-hooks
     rev: v4.4.0
