--- a/.github/workflows/python-ci.yml
+++ b/.github/workflows/python-ci.yml
@@ -55,7 +55,7 @@ jobs:
       - name: Test with unittest
         run: |
           source .venv/bin/activate
-          python -m unittest discover
+          python -m pytest --junitxml=reports/jest-test-report.xml
 
       - name: Test Report
         uses: dorny/test-reporter@v1
