--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,16 +7,16 @@ readme = "README.md"
 
 [tool.poetry.dependencies]
 python = "^3.11"
-sphinx = "^7.2.6"
 pydantic = "^2.4.2"
-furo = "^2023.9.10"
-sphinx-autodoc-typehints = "^1.25.2"
-autodoc-pydantic = "^2.0.1"
 
 [tool.poetry.group.dev.dependencies]
 pre-commit = "^3.5.0"
 black = "^23.11.0"
-
+furo = "^2023.9.10"
+sphinx = "^7.2.6"
+sphinx-autodoc-typehints = "^1.25.2"
+autodoc-pydantic = "^2.0.1"
+pytest = "^8.2.2"
 
 [build-system]
 requires = ["poetry-core"]
