--- a/.github/workflows/python-ci.yml
+++ b/.github/workflows/python-ci.yml
@@ -61,11 +61,11 @@ jobs:
         uses: dorny/test-reporter@v1
         if: success() || failure()
         with:
-          name: JEST Tests
+          name: test-results
           path: reports/jest-*.xml
-          reporter: jest-junit
+          reporter: java-junit
 
-  build_pdf:
+  build-pdf:
     runs-on: ubuntu-latest
     permissions:
       pull-requests: write
