--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,11 @@ sphinx = "^7.2.6"
 sphinx-autodoc-typehints = "^1.25.2"
 autodoc-pydantic = "^2.0.1"
 pytest = "^8.2.2"
+pytest-cov = "^5.0.0"
+
+[tool.coverage.run]
+omit = ["tests/*", "*/__init__.py"]
+exclude_also = ["if __name__ == .__main__.:", ]
 
 [build-system]
 requires = ["poetry-core"]
