--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,12 +12,14 @@ pydantic = "^2.4.2"
 [tool.poetry.group.dev.dependencies]
 pre-commit = "^3.5.0"
 black = "^23.11.0"
+pytest = "^8.2.2"
+pytest-cov = "^5.0.0"
+
+[tool.poetry.group.docs.dependencies]
 furo = "^2023.9.10"
 sphinx = "^7.2.6"
 sphinx-autodoc-typehints = "^1.25.2"
 autodoc-pydantic = "^2.0.1"
-pytest = "^8.2.2"
-pytest-cov = "^5.0.0"
 
 [tool.coverage.run]
 omit = ["tests/*", "*/__init__.py"]
