--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,7 +17,7 @@ pytest-cov = "^5.0.0"
 
 [tool.poetry.group.docs.dependencies]
 furo = "^2023.9.10"
-sphinx = "^7.2.6"
+sphinx = "7.2.6"
 sphinx-autodoc-typehints = "^1.25.2"
 autodoc-pydantic = "^2.0.1"
 
