ci: fix dependency installation step

--- a/.github/workflows/jekyll-gh-pages.yml
+++ b/.github/workflows/jekyll-gh-pages.yml
@@ -46,11 +46,10 @@ jobs:
           key: venv-${{ runner.os }}-${{ steps.setup-python.outputs.python-version }}-${{ hashFiles('**/poetry.lock') }}
 
       - name: Install dependencies
-        if: steps.cached-poetry-dependencies.outputs.cache-hit != 'true'
-        run: poetry install --no-interaction --no-root --only docs
+        run: poetry install --no-interaction --no-root --only docs && pip install -U sphinx
 
       - name: Generate docs
-        run: (cd docs && make html)
+        run: (cd docs && ls && make html)
 
       - name: Setup Pages
         uses: actions/configure-pages@v5
