--- a/.github/workflows/jekyll-gh-pages.yml
+++ b/.github/workflows/jekyll-gh-pages.yml
@@ -46,7 +46,7 @@ jobs:
           key: venv-${{ runner.os }}-${{ steps.setup-python.outputs.python-version }}-${{ hashFiles('**/poetry.lock') }}
 
       - name: Install dependencies
-        run: poetry install --no-interaction --no-root --only docs && pip install -U sphinx
+        run: poetry install --no-interaction --no-root --only docs && source .venv/bin/activate
 
       - name: Generate docs
         run: (cd docs && ls && make html)
